--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>20211205</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>12.0</version>
+        </dependency>
 
         <dependency>
             <groupId>net.sf.opencsv</groupId>
